--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,8 @@ steps:
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: |
+      echo "##vso[task.prependpath]$(Build.SourcesDirectory)/path/to/cache/key"
+      echo "##vso[task.prependpath]$(Build.SourcesDirectory)/path/to/another/cache/key"
       az acr repository delete --name demoarc123 --image web-game:tag --yes
       docker build -t demoarc123.azurecr.io/web-game:tag 2048-game
       az acr login -n demoarc123
