--- a/01_kubernetes_aks/app-deploy.yaml
+++ b/01_kubernetes_aks/app-deploy.yaml
@@ -21,7 +21,7 @@ spec:
                 "kubernetes.io/os": linux
             containers:
                 - name: web-game
-                  image: demoarc123.azurecr.io/web-game:tag
+                  image: demoarc123.azurecr.io/web-game:latest
                   ports:
                       - containerPort: 80
                   resources:
