Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,10 +14,10 @@ steps:
     inlineScript: |
       echo "##vso[task.prependpath]$(Build.SourcesDirectory)/path/to/cache/key"
       echo "##vso[task.prependpath]$(Build.SourcesDirectory)/path/to/another/cache/key"
-      az acr repository delete --name demoarc123 --image web-game:tag --yes
+      az acr repository delete --name demoarc123 --image web-game:latest --yes
       docker build -t demoarc123.azurecr.io/web-game:latest 2048-game
       az acr login -n demoarc123
-      docker push demoarc123.azurecr.io/web-game:lates
+      docker push demoarc123.azurecr.io/web-game:latest
 
 - script: cat 01_kubernetes_aks/app-deploy.yaml
 
