Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
     scriptLocation: 'inlineScript'
     inlineScript: |
       az acr repository delete --name demoarc123 --image web-game:latest --yes
-      docker build -t demoarc123.azurecr.io/web-game:latest -f 2048-game/Dockerfile
+      docker build -t demoarc123.azurecr.io/web-game:latest 2048-game
       az acr login -n demoarc123
       docker push demoarc123.azurecr.io/web-game:latest
 
