--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
     namespace: 'default'
     command: 'apply'
     inline: |
-      kubectl delete ingress web-game
+      kubectl delete service web-game
       apiVersion: apps/v1
       kind: Deployment
       metadata:
