Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,3 @@
-
 trigger:
 - main
 
@@ -40,7 +39,6 @@ steps:
                   maxSurge: 1
                   maxUnavailable: 1
           minReadySeconds: 5
-           
           template:
               metadata:
                   labels:
@@ -58,7 +56,7 @@ steps:
                                 cpu: 250m
                             limits:
                                 cpu: 500m
-                  imagePullPolicy: Always
+                        imagePullPolicy: Always  # Thêm cấu hình này ở đây
       ---
       apiVersion: v1
       kind: Service
