Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,10 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
+variables:
+- name: versionnumber
+  value: $(Build.SourceBranchName)-$(Build.BuildId)
+
 steps:
 - task: AzureCLI@2
   inputs:
@@ -11,10 +15,18 @@ steps:
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: |
-      az acr repository delete --name demoarc123 --image web-game:latest --yes
-      docker build -t demoarc123.azurecr.io/web-game:latest 2048-game
+      az acr repository delete --name demoarc123 --image web-game:$(versionnumber) --yes
+      docker build -t demoarc123.azurecr.io/web-game:$(versionnumber) 2048-game
       az acr login -n demoarc123
-      docker push demoarc123.azurecr.io/web-game:latest
+      docker push demoarc123.azurecr.io/web-game:$(versionnumber)
+
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: |
+      $newVersion = [int]$(Build.SourceBranchName)-$(Build.BuildId) + 1
+      Write-Host "##vso[task.setvariable variable=versionnumber]$newVersion"
+    displayName: 'Set New Version Number'
 
 - task: Kubernetes@1
   inputs:
@@ -48,7 +60,7 @@ steps:
                       "kubernetes.io/os": linux
                   containers:
                       - name: web-game
-                        image: demoarc123.azurecr.io/web-game:latest
+                        image: demoarc123.azurecr.io/web-game:$(versionnumber)
                         ports:
                             - containerPort: 80
                         resources:
@@ -56,12 +68,13 @@ steps:
                                 cpu: 250m
                             limits:
                                 cpu: 500m
-                        imagePullPolicy: Always  # Thêm cấu hình này ở đây
+                        imagePullPolicy: Always
       ---
       apiVersion: v1
       kind: Service
       metadata:
           name: web-game
+
       spec:
           type: LoadBalancer
           ports:
