Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ trigger:
 
 variables:
 - name: originalBranchName
-  value: $(Build.SourceBranchName)
+  value: 'main'
 
 pool:
   vmImage: ubuntu-latest
