--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,9 @@ steps:
     kubernetesCluster: 'demokubernete'
     namespace: 'default'
     command: 'apply'
-    inline: |
+    
+    useConfigurationFile: true
+    configuration: |
       apiVersion: apps/v1
       kind: Deployment
       metadata:
@@ -79,8 +81,6 @@ steps:
           selector:
               app: web-game
 
-    useConfigurationFile: true
-    configuration: '01_kubernetes_aks'
     secretType: 'dockerRegistry'
     containerRegistryType: 'Azure Container Registry'
     azureSubscriptionEndpointForSecrets: 'Towards-AzurePortal'
