--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,52 +34,52 @@ steps:
     kubernetesCluster: 'demokubernete'
     namespace: 'default'
     command: 'apply'
-    useConfigurationFile: true
-    configurationType: 'inline'
+    useConfigurationFile: false
     inline: |
       apiVersion: apps/v1
-            kind: Deployment
-            metadata:
-                name: web-game
-            spec:
-                replicas: 1
-                selector:
-                    matchLabels:
-                        app: web-game
-                strategy:
-                    rollingUpdate:
-                        maxSurge: 1
-                        maxUnavailable: 1
-                minReadySeconds: 5
-                template:
-                    metadata:
-                        labels:
-                            app: web-game
-                    spec:
-                        nodeSelector:
-                            "kubernetes.io/os": linux
-                        containers:
-                            - name: web-game
-                              image: demoarc123.azurecr.io/web-game:$(versionnumber)
-                              ports:
-                                  - containerPort: 80
-                              resources:
-                                  requests:
-                                      cpu: 250m
-                                  limits:
-                                      cpu: 500m
-                              imagePullPolicy: Always
-            ---
-            apiVersion: v1
-            kind: Service
-            metadata:
-                name: web-game
-            spec:
-                type: LoadBalancer
-                ports:
-                    - port: 80
-                selector:
-                    app: web-game
+      kind: Deployment
+      metadata:
+          name: web-game
+      spec:
+          replicas: 1
+          selector:
+              matchLabels:
+                  app: web-game
+          strategy:
+              rollingUpdate:
+                  maxSurge: 1
+                  maxUnavailable: 1
+          minReadySeconds: 5
+          template:
+              metadata:
+                  labels:
+                      app: web-game
+              spec:
+                  nodeSelector:
+                      "kubernetes.io/os": linux
+                  containers:
+                      - name: web-game
+                        image: demoarc123.azurecr.io/web-game:$(versionnumber)
+                        ports:
+                            - containerPort: 80
+                        resources:
+                            requests:
+                                cpu: 250m
+                            limits:
+                                cpu: 500m
+                        imagePullPolicy: Always
+      ---
+      apiVersion: v1
+      kind: Service
+      metadata:
+          name: web-game
+      spec:
+          type: LoadBalancer
+          ports:
+              - port: 80
+          selector:
+              app: web-game
+
     secretType: 'dockerRegistry'
     containerRegistryType: 'Azure Container Registry'
     azureSubscriptionEndpointForSecrets: 'Towards-AzurePortal'
