--- a/01_kubernetes_aks/app-deploy.yaml
+++ b/01_kubernetes_aks/app-deploy.yaml
@@ -1,37 +1,42 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: web-game
+  name: web-game
 spec:
-    replicas: 1
-    selector:
-        matchLabels:
-            app: web-game
-    strategy:
-        rollingUpdate:
-            maxSurge: 1
-            maxUnavailable: 1
-    minReadySeconds: 5
-    template:
-        metadata:
-            labels:
-                app: web-game
-        spec:
-            nodeSelector:
-                "kubernetes.io/os": linux
-            containers:
-                - name: web-game
-                  image: demoarc123.azurecr.io/web-game:{{ variables.versionnumber }}
-                  ports:
-                      - containerPort: 80
-                  resources:
-                      requests:
-                          cpu: 250m
-                      limits:
-                          cpu: 500m
-                  imagePullPolicy: Always
+  replicas: 1
+  selector:
+    matchLabels:
+      app: web-game
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
+  minReadySeconds: 5 
+  template:
+    metadata:
+      labels:
+        app: web-game
+    spec:
+      nodeSelector:
+        "kubernetes.io/os": linux
+      containers:
+      - name: web-game
+        image: mylabacr13.azurecr.io/web-game:{{ variables.versionnumber }}
+        ports:
+        - containerPort: 80
+        resources:
+          requests:
+            cpu: 250m
+          limits:
+            cpu: 500m
 ---
 apiVersion: v1
 kind: Service
 metadata:
-    name: web-game
+  name: web-game
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 80
+  selector:
+    app: web-game
