Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -67,3 +67,14 @@ steps:
                   limits:
                     cpu: 500m
                 imagePullPolicy: Always
+      ---
+      apiVersion: v1
+      kind: Service
+      metadata:
+          name: web-game
+      spec:
+          type: LoadBalancer
+          ports:
+              - port: 80
+          selector:
+              app: web-game
