Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,57 +30,15 @@ steps:
   inputs:
     connectionType: 'Azure Resource Manager'
     azureSubscriptionEndpoint: 'Towards-AzurePortal'
-    azureResourceGroup: 'demogroup'
+    azureResourceGroup: 'DemoGroup'
     kubernetesCluster: 'demokubernete'
     namespace: 'default'
     command: 'apply'
     useConfigurationFile: true
-    configurationType: 'inline'
-    inline: |
-      apiVersion: apps/v1
-      kind: Deployment
-      metadata:
-        name: web-game
-      spec:
-        replicas: 1
-        selector:
-          matchLabels:
-            app: web-game
-        strategy:
-          rollingUpdate:
-            maxSurge: 1
-            maxUnavailable: 1
-        minReadySeconds: 5 
-        template:
-          metadata:
-            labels:
-              app: web-game
-          spec:
-            nodeSelector:
-              "kubernetes.io/os": linux
-            containers:
-            - name: web-game
-              image: mylabacr13.azurecr.io/web-game:$(versionnumber)
-              ports:
-              - containerPort: 80
-              resources:
-                requests:
-                  cpu: 250m
-                limits:
-                  cpu: 500m
-      ---
-      apiVersion: v1
-      kind: Service
-      metadata:
-        name: web-game
-      spec:
-        type: LoadBalancer
-        ports:
-        - port: 80
-        selector:
-          app: web-game
+    configuration: '01_kubernetes_aks'
     secretType: 'dockerRegistry'
     containerRegistryType: 'Azure Container Registry'
     azureSubscriptionEndpointForSecrets: 'Towards-AzurePortal'
     azureContainerRegistry: 'demoarc123.azurecr.io'
     forceUpdate: false
+
