--- a/01_kubernetes_aks/app-deploy.yaml
+++ b/01_kubernetes_aks/app-deploy.yaml
@@ -21,7 +21,7 @@ spec:
         "kubernetes.io/os": linux
       containers:
       - name: web-game
-        image: mylabacr13.azurecr.io/web-game:$(versionnumber)
+        image: mylabacr13.azurecr.io/web-game:1
         ports:
         - containerPort: 80
         resources:
