Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,7 @@ steps:
 
 - task: AzureCLI@2
   inputs:
-    azureSubscription: 'YourAzureSubscription'
+    azureSubscription: 'Towards-AzurePortal'
     scriptType: 'bash'
     scriptLocation: 'inlineScript'
     inlineScript: |
