Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,10 @@ steps:
     azureContainerRegistry: 'demoarc123.azurecr.io'
     forceUpdate: false
 
+- powershell: |
+    Write-Host "Version Number: $env:versionnumber"
+  displayName: 'Print Version Number'
+  
 - task: Kubernetes@1
   inputs:
     connectionType: 'Azure Resource Manager'
@@ -47,7 +51,7 @@ steps:
     kubernetesCluster: 'demokubernete'
     namespace: 'default'
     command: 'set'
-    arguments: image deployment/web-game *=demoarc123.azurecr.io/web-game:20
+    arguments: 'image deployment/web-game --set=image=demoarc123.azurecr.io/web-game:"$(versionnumber)"'
     secretType: 'dockerRegistry'
     containerRegistryType: 'Azure Container Registry'
     azureSubscriptionEndpointForSecrets: 'Towards-AzurePortal'
