--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ steps:
     forceUpdate: false
 
 - powershell: |
-    Write-Host "Version Number: $env:versionnumber"
+    Write-Host "Version Number: $(versionnumber)"
   displayName: 'Print Version Number'
 
 - task: Kubernetes@1
