--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,16 +20,56 @@ steps:
       docker push demoarc123.azurecr.io/web-game:$(versionnumber)
 
 - powershell: |
-    $deploymentExists = kubectl get deployment/web-game -o name --ignore-not-found
-    if ($null -eq $deploymentExists) {
-      Write-Host "Deployment web-game does not exist. Applying configuration..."
-      kubectl apply -n default -f 01_kubernetes_aks.yaml
-    } else {
-      Write-Host "Deployment web-game already exists. Setting image..."
-      kubectl set image deployment/web-game *=demoarc123.azurecr.io/web-game:$(versionnumber) -n default
-    }
-  displayName: 'Check and Apply or Set'
-
-- powershell: |
     Write-Host "Version Number: $(versionnumber)"
   displayName: 'Print Version Number'
+
+- task: AzureCLI@2
+  inputs:
+    azureSubscription: 'Towards-AzurePortal'
+    scriptType: 'bash'
+    scriptLocation: 'inlineScript'
+    inlineScript: |
+      # Kiểm tra xem Deployment có tồn tại hay không
+      deployment_name="web-game"
+      namespace="default"
+
+      deployment_exists=$(az aks browse --resource-group <ResourceGroupName> --name <AKSClusterName> --admin)
+      if [[ $deployment_exists == *"kubectl get deployment/$deployment_name"* ]]; then
+        echo "##vso[task.setvariable variable=deployment_exists]true"
+      else
+        echo "##vso[task.setvariable variable=deployment_exists]false"
+      fi
+  displayName: 'Check Deployment Existence'
+
+- task: Kubernetes@1
+  condition: eq(variables['deployment_exists'], 'false')
+  inputs:
+    connectionType: 'Azure Resource Manager'
+    azureSubscriptionEndpoint: 'Towards-AzurePortal'
+    azureResourceGroup: 'DemoGroup'
+    kubernetesCluster: 'demokubernete'
+    namespace: 'default'
+    command: 'apply'
+    useConfigurationFile: true
+    configuration: '01_kubernetes_aks'
+    secretType: 'dockerRegistry'
+    containerRegistryType: 'Azure Container Registry'
+    azureSubscriptionEndpointForSecrets: 'Towards-AzurePortal'
+    azureContainerRegistry: 'demoarc123.azurecr.io'
+    forceUpdate: false
+
+- task: Kubernetes@1
+  condition: eq(variables['deployment_exists'], 'true')
+  inputs:
+    connectionType: 'Azure Resource Manager'
+    azureSubscriptionEndpoint: 'Towards-AzurePortal'
+    azureResourceGroup: 'DemoGroup'
+    kubernetesCluster: 'demokubernete'
+    namespace: 'default'
+    command: 'set'
+    arguments: 'image deployment/web-game *=demoarc123.azurecr.io/web-game:$(versionnumber)'
+    secretType: 'dockerRegistry'
+    containerRegistryType: 'Azure Container Registry'
+    azureSubscriptionEndpointForSecrets: 'Towards-AzurePortal'
+    azureContainerRegistry: 'demoarc123.azurecr.io'
+    forceUpdate: false
