--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,15 +30,13 @@ steps:
     scriptLocation: 'inlineScript'
     inlineScript: |
       # Kiểm tra xem Deployment có tồn tại hay không
-      deployment_name="web-game"
-      namespace="default"
-
-      deployment_exists=$(az aks browse --resource-group <ResourceGroupName> --name <AKSClusterName> --admin)
-      if [[ $deployment_exists == *"kubectl get deployment/$deployment_name"* ]]; then
-        echo "##vso[task.setvariable variable=deployment_exists]true"
+      deploymentExists=$(az kubectl get deployment "$(deploymentName)" --resource-group "$(resourceGroup)" --cluster-name "$(aksCluster)" --output json --query metadata.name --only json)
+      if [ "$deploymentExists" == "\"$(deploymentName)\"" ]; then
+        echo "##vso[task.setvariable variable=deploymentExists]true"
       else
-        echo "##vso[task.setvariable variable=deployment_exists]false"
+        echo "##vso[task.setvariable variable=deploymentExists]false"
       fi
+
   displayName: 'Check Deployment Existence'
 
 - task: Kubernetes@1
