--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ steps:
     scriptLocation: 'inlineScript'
     inlineScript: |
       # Kiểm tra xem Deployment có tồn tại hay không
-      deploymentExists=$(az kubectl get deployment "$(deploymentName)" --resource-group "$(resourceGroup)" --cluster-name "$(aksCluster)" --output json --query metadata.name --only json)
+      deploymentExists=$(kubectl get deployment/web-game -o name --ignore-not-found)
       if [ "$deploymentExists" == "\"$(deploymentName)\"" ]; then
         echo "##vso[task.setvariable variable=deploymentExists]true"
       else
