--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
     inlineScript: |
       # Kiểm tra xem Deployment có tồn tại hay không
       az aks get-credentials --resource-group DemoGroup --name demokubernete
-      deploymentExists=$(az kubectl get deployment/web-game -o name --ignore-not-found)
+      deploymentExists=$(kubectl get deployment/web-game -o name --ignore-not-found)
       if [ "$deploymentExists" == "\"$(deploymentName)\"" ]; then
         echo "##vso[task.setvariable variable=deploymentExists]true"
       else
