--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,6 +6,7 @@ pool:
 
 variables:
   versionnumber: $[counter(variables['Build.SourceBranchName'], 1)]
+  deploymentExists:
 
 steps:
 - task: AzureCLI@2
@@ -41,7 +42,7 @@ steps:
   displayName: 'Check Deployment Existence'
 
 - task: Kubernetes@1
-  condition: eq(variables['deployment_exists'], 'true')
+  condition: eq(variables['deploymentExists'], 'true')
   inputs:
     connectionType: 'Azure Resource Manager'
     azureSubscriptionEndpoint: 'Towards-AzurePortal'
@@ -58,7 +59,7 @@ steps:
     forceUpdate: false
 
 - task: Kubernetes@1
-  condition: eq(variables['deployment_exists'], 'false')
+  condition: eq(variables['deploymentExists'], 'false')
   inputs:
     connectionType: 'Azure Resource Manager'
     azureSubscriptionEndpoint: 'Towards-AzurePortal'
